--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -2386,3 +2386,24 @@ background: #f7f7f7 none repeat scroll 0 0;
         transform: rotate(359deg);
     }
 }
+
+
+a.asc:after, a.desc:after {
+    position: relative;
+
+    display: inline-block;
+    font-family: Corner;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    padding-left: 5px;
+    font-size:8px;
+}
+
+a.asc:after {
+    content: "\f007";
+}
+
+a.desc:after {
+    content: "\f008";
+}
