--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -176,8 +176,24 @@ div.required label:after {
     margin-left:15px;
     padding:0;
 }
+.grid{
+    position: relative;
+}
 
-
+.grid-loading{
+    display: none;
+    top:0;
+    left:0;
+    z-index:100;
+    position: absolute;
+    width:100%;
+    height:100px;
+    min-height: 100%;
+    background-color: rgba(255,255,255,0.6);
+    background-image: url(../images/ajax-loader.gif);
+    background-repeat: no-repeat;
+    background-position: center center;
+}
 .common-ajax-loading{
     position: fixed;
     top:20px;
