--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,44 +1,45 @@
 body {
-    /*  padding-top: 40px;
-      padding-bottom: 40px;*/
     margin:0;
     padding:0;
     background-color: #eee;
 }
-.admin-auth .panel-body{
-    padding:15px;
-}
-.admin-auth .form-horizontal .form-group{
-    border:0;
-    padding-top: 0;
+.card-body{
+    padding-top: 1rem;
 }
 .auth-logo{
     position: relative;
-    width:200px;
+    width:215px;
     margin: 0 auto;
 
 }
+
 .auth-logo a{
-    font-family: Corner;
+    width:215px;
+    font-family: Pixelion, Montserrat;
     color:#777;
     position: relative;
-    font-size:36px;
+    font-size:30px;
     display: block;
-    line-height: 36px;
-    padding-left: 50px;
-    height: 40px;
+    line-height: 60px;
+    padding-left: 65px;
+    text-align: right;
+    height: 65px;
+    line-height: 65px;
     margin-bottom: 20px;
+    text-decoration: none;
 }
 .auth-logo a:after{
+    font-family: Pixelion;
     position: absolute;
-    content:"\f002";
+    content:"\f001";
     left:0;
     top:0;
-    font-size:40px;
+    font-size:60px;
+    line-height: 65px;
 }
 .auth-logo .auth-logo-hint{
     position: absolute;
-    bottom:-5px;
+    bottom:5px;
     right:0;
     color:#999;
     font-size:11px;
@@ -47,29 +48,32 @@ body {
 input[type="radio"], input[type="checkbox"]{
     margin-top: 0;
 }
-#login-form .radio,
-#login-form .chceckbox{
-    margin-bottom: 0;   
-}
 /*
 .form-signin {
     max-width: 330px;
     padding: 15px;
     margin: 0 auto;
 }
-.form-signin .checkbox{
-    margin-top: 0;
-}
+*/
 .copyright{
     font-size:12px;
     color:#999;
 }
+.form-check{
+    margin-top:10px;
+
+}
+.form-check input{
+    margin-top: 2px;
+}
+form .form-group{
+    border:0;
+    padding: 0 0 1rem 0;
+}
+/*
 .form-signin .form-control {
     position: relative;
     height: auto;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
     padding: 10px;
     font-size: 16px;
 }
@@ -138,6 +142,9 @@ input[type="radio"], input[type="checkbox"]{
     -webkit-animation-name: bounceInDown;
     animation-name: bounceInDown;
 }
-.panel-body .alert{
-    margin-top:0;
+
+.card-body form .alert{
+    margin-top: 0;
+    margin-right: 1rem;
+    margin-left:1rem;
 }
