--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -1105,7 +1105,7 @@ h6,
 */
 .table > thead > tr > th {
   text-align: center;
-  font-size: 11px;
+  font-size: 13px;
   padding: 6px;
   border-bottom: 0;
 }
@@ -1237,10 +1237,50 @@ h6,
 }
 
 /* Yii */
-label.required span.required {
+form div.required label:after {
+  content: " * ";
   color: red;
-  font-size: 16px;
-  font-weight: bold;
+}
+
+.not-set {
+  color: #c55;
+  font-style: italic;
+}
+
+/* add sorting icons to gridview sort links */
+a.asc:after, a.desc:after {
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  font-family: 'Pixelion';
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  padding-left: 5px;
+}
+
+a.asc:after {
+  content: "\f007";
+}
+
+a.desc:after {
+  content: "\f008";
+}
+
+.sort-numerical a.asc:after {
+  content: "\f007";
+}
+
+.sort-numerical a.desc:after {
+  content: "\f008";
+}
+
+.sort-ordinal a.asc:after {
+  content: "\f007";
+}
+
+.sort-ordinal a.desc:after {
+  content: "\f008";
 }
 
 #dialog_edit_columns {
