--- a/assets/scss/dashboard.scss
+++ b/assets/scss/dashboard.scss
@@ -1,9 +1,7 @@
 ﻿@import "base";
 @import "mixins";
 @import "ui";
-a {
-  text-decoration: underline;
-}
+
 
 .bootstrap-select .btn-light {
   border-color: #c9c9c9;
@@ -14,7 +12,11 @@ a {
   border-color: red;
   background-color: #fff;
 }
-
+tr.sortable-column-placeholder,
+tr.sortable-column-placeholder td{
+  height: 130px;
+  background: rgba(0, 123, 255, 0.25);
+}
 a.btn,
 .navbar-brand,
 .nav-link,
