--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -164,7 +164,7 @@
 .ui-slider {
   position: relative;
   height: 5px;
-  margin: 1.5rem 0 0 0;
+  margin: 0;
   background: #343a40;
   border: 0;
 }
@@ -175,7 +175,7 @@
   display: block;
   background: #343a40;
   border: 1px solid #292d32;
-  position: relative;
+  position: absolute;
 }
 .ui-slider .ui-slider-handle:focus {
   outline: none;
