--- a/assets/scss/_ui.scss
+++ b/assets/scss/_ui.scss
@@ -166,7 +166,7 @@
 .ui-slider {
   position: relative;
   height: 5px;
-  margin: 1.5rem 0 0 0;
+  margin: 0;
   background: $primary_color;
   border: 0;
   .ui-slider-handle {
@@ -176,7 +176,7 @@
     display: block;
     background: $primary_color;
     border: 1px solid $primary_border_color;
-    position: relative;
+    position: absolute;
     &:focus {
       outline: none;
     }
