--- a/assets/scss/dashboard.scss
+++ b/assets/scss/dashboard.scss
@@ -586,7 +586,7 @@ td.ui-sortable-handle {
   width: 30px;
 }
 
-#page-nav {
+#container-breadcrumbs {
   width: 100%;
   margin-bottom: 1rem;
   .nav li {
