--- a/blocks/hosting/assets/css/hosting.css
+++ b/blocks/hosting/assets/css/hosting.css
@@ -39,34 +39,36 @@
 }*/
 
 .progress {
-  position: relative;
-  height: 31px;
-    background: rgba(145,232,66,1);
-    background: -moz-linear-gradient(left, rgba(145,232,66,1) 0%, rgba(255,69,69,1) 100%);
-    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(145,232,66,1)), color-stop(100%, rgba(255,69,69,1)));
-    background: -webkit-linear-gradient(left, rgba(145,232,66,1) 0%, rgba(255,69,69,1) 100%);
-    background: -o-linear-gradient(left, rgba(145,232,66,1) 0%, rgba(255,69,69,1) 100%);
-    background: -ms-linear-gradient(left, rgba(145,232,66,1) 0%, rgba(255,69,69,1) 100%);
-    background: linear-gradient(to right, rgba(145,232,66,1) 0%, rgba(255,69,69,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#91e842', endColorstr='#ff4545', GradientType=1 );
+    position: relative;
+    height: 31px;
+    background: rgba(145, 232, 66, 1);
+    background: -moz-linear-gradient(left, rgba(145, 232, 66, 1) 0%, rgba(255, 69, 69, 1) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(145, 232, 66, 1)), color-stop(100%, rgba(255, 69, 69, 1)));
+    background: -webkit-linear-gradient(left, rgba(145, 232, 66, 1) 0%, rgba(255, 69, 69, 1) 100%);
+    background: -o-linear-gradient(left, rgba(145, 232, 66, 1) 0%, rgba(255, 69, 69, 1) 100%);
+    background: -ms-linear-gradient(left, rgba(145, 232, 66, 1) 0%, rgba(255, 69, 69, 1) 100%);
+    background: linear-gradient(to right, rgba(145, 232, 66, 1) 0%, rgba(255, 69, 69, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#91e842', endColorstr='#ff4545', GradientType=1);
 }
+
 .amount {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 100%;
-  transition: all 0.8s;
-  background: #f7f7f7;
-  width: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    transition: all 0.8s;
+    background: #f7f7f7;
+    width: 0;
 }
+
 .val {
 
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 10;
-  text-align: center;
-  line-height: 31px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    text-align: center;
+    line-height: 31px;
 }
